# coursework

./: README.md
convolutional-neural-networks/: README.md
finfinity/: README.md
finfinity/SEProject/: SpendingPieChart.html  addBudget.html  addGoal.html  budget.html  chatbot.html  database.js  goalTracker.html  index.html  indexDashboard.html  indexSpendings.html  inputGoal.html  inputSpendings.html  logInPage.html  resetPasswordPage.html  signUpPage.html  stylesLogin.css
o3f-lite-reimplementation/: .gitignore  CMakeLists.txt  README.md  o3f_lite.cpp
o3f-lite-reimplementation/O3F_Lite/: Makefile  env.cpp  env.hpp  main.cpp  o3f_lite  o3f_train.csv  option_executor.cpp  option_executor.hpp  option_planner.cpp  option_planner.hpp  utils.hpp
o3f-lite-reimplementation/include/: Agent.h  Agent.hpp  Env.hpp  Environment.h  Executor.hpp  Option.hpp  OptionExecutor.h  OptionPlanner.h  Planner.hpp  Visualizer.h  Visualizer.hpp  utils.h
o3f-lite-reimplementation/src/: Agent.cpp  Env.cpp  Executor.cpp  Option.cpp  Planner.cpp  Visualizer.cpp  main.cpp
o3f-lite-reimplementation/tools/: README.md  plot_results.py  plot_results_simple.py
tl13-compiler/: README.md
